k8s-resources/argocd/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: argocd-frontend-config
    networking.gke.io/managed-certificates: argocd-tls-cert
    kubernetes.io/ingress.class: "gce"
    external-dns.alpha.kubernetes.io/hostname: argocd.k8s.broncoctf.xyz
  labels:
    name: argocd
spec:
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 80
